# MicLayer

./: .gitignore  .npmrc  BUILDING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  README.md  package.json  pnpm-lock.yaml
apps/desktop/: eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: app_state.rs  commands.rs  diagnostics.rs  hotkeys.rs  lib.rs  main.rs  profile_commands.rs  profile_store.rs  recording_commands.rs  tray.rs  vbcable_install.rs  wizard.rs
apps/desktop/src/features/dashboard/: Dashboard.tsx
apps/desktop/src/features/onboarding/: FirstRunModal.tsx
apps/desktop/src/features/profiles/: Profiles.tsx
apps/desktop/src/features/recorder/: RecordTestModal.tsx
apps/desktop/src/features/settings/: Settings.tsx
apps/desktop/src/features/tune/: Tune.tsx
apps/desktop/src/features/wizard/: AutoTuneWizard.tsx
apps/desktop/src/ipc/: commands.ts  diagnostics.ts  events.ts  hotkeys.ts  profiles.ts  recording.ts  sink.ts  vbcable.ts  wizard.ts
apps/desktop/src/shared/: DeviceSelector.tsx  EngineControls.tsx  EqCurve.tsx  LevelMeter.tsx  Logo.tsx  ModuleCard.tsx  Pill.tsx  ProfilePicker.tsx  SegmentedToggle.tsx  Slider.tsx  Toggle.tsx  biquadResponse.ts  useClickOutside.ts
apps/desktop/src/shell/: Footer.tsx  Sidebar.tsx  TitleBar.tsx  TopBar.tsx
apps/desktop/src/state/: defaultProfile.ts  useAppStore.ts  useEngineAutostart.ts  useEngineBridge.ts  useProfileSync.ts  useProfilesBridge.ts
apps/desktop/src/styles/: global.css
apps/desktop/src/theme/: ThemeProvider.tsx
docs/: architecture.md  audio-engine.md  diagnostics.md  dsp-chain.md  error-handling.md  privacy.md  product-spec.md  profile-format.md  roadmap.md  ui-plan.md  virtual-microphone.md  windows-driver-notes.md
engine/audio/: Cargo.toml
engine/audio/src/: capture.rs  controller.rs  drain.rs  engine.rs  events.rs  faults.rs  lib.rs  meters.rs  profile.rs  recorder.rs
engine/devices/: Cargo.toml
engine/devices/src/: lib.rs
engine/dsp/: Cargo.toml
engine/dsp/src/: compressor.rs  de_esser.rs  eq.rs  gate.rs  graph.rs  high_pass.rs  input_gain.rs  lib.rs  limiter.rs  noise_suppression.rs  output_gain.rs  params.rs  util.rs
engine/soak/: Cargo.toml
engine/soak/src/: main.rs
engine/virtual-mic/: Cargo.toml
engine/virtual-mic/src/: lib.rs  vb_cable.rs
installer/: README.md
profiles/: README.md  discord.json  headset-rescue.json  laptop-mic-rescue.json  late-night.json  natural.json  noisy-room.json  podcast.json  radio-style.json  streaming.json  voiceover.json
scripts/: README.md
