# SCAFFOLD: Rust workspace manifest. None of these crates are implemented yet —
# see docs/audio-engine.md and docs/roadmap.md for the milestone schedule.

[workspace]
resolver = "2"
members = [
    "engine/audio",
    "engine/dsp",
    "engine/devices",
    "engine/virtual-mic",
    "engine/soak",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.78"
license = "MIT"
repository = "https://github.com/<org>/MicLayer"
authors = ["MicLayer contributors"]

[workspace.dependencies]
# Audio I/O
cpal = "0.15"

# DSP primitives
biquad = "0.5"
# Defaults include the embedded RNNoise model weights — required for
# DenoiseState::new() to work without a manually-supplied model.
nnnoiseless = "0.5"
rubato = "0.15"

# WAV I/O (test recorder)
hound = "3"

# Real-time-safe utilities
rtrb = "0.3"
triple_buffer = "8"

# Common
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
parking_lot = "0.12"
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# Tauri (pinned in apps/desktop/src-tauri/Cargo.toml as well)
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }

# Windows
windows = { version = "0.56", features = [] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1     # audio code is unusable at -O0; keep some opt in dev
debug = true
