# DSP modules.

[package]
name = "miclayer-dsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
biquad.workspace = true
nnnoiseless.workspace = true
triple_buffer.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
