# VirtualMicSink trait + backends. MVP backend is vb_cable.

[package]
name = "miclayer-virtual-mic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cpal.workspace = true
rtrb.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
